syntax = "proto3";

package greet;

option go_package = "./greetpb";
//for greeting
message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greetreq = 1;
}

message GreetResponse {
    string result = 1;
}

// for login
message Logining {
    string username = 1;
    string password = 2;
}

message LoginRequest {
    Logining loginreq = 1;
}

message LoginResponse {
    string result = 1;
}

// for server streaming
message GreetOneRequest {
    Greeting onereq = 1;
}

message GreetManyResponse {
    string result = 1;
}

// for client streaming
message GreetManyRequest {
    Greeting manyreq = 1;
}

message GreetOneResponse {
    string result = 1;
}


service GreetService {
    //for greet
    rpc Greet (GreetRequest) returns (GreetResponse);

    //for greet again
    rpc GreetAgain (GreetRequest) returns (GreetResponse);

    //for login
    rpc Login (LoginRequest) returns (LoginResponse);

    // for server streaming
    rpc ServerGreeting (GreetOneRequest) returns (stream GreetManyResponse);

    // for client streaming
    rpc ClientGreet (stream GreetManyRequest) returns (GreetOneResponse);
}